# label-reader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  GEMINI.md  IDEAS.md  README.md  TODO.md  app.py  extract_labels.py
backend/: TODO.md  openapi.json  pyproject.toml  regen_schema.py
backend/app/: main.py
backend/tests/: test_main.py  test_prompt.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: CameraCapture.vue  LabelReaderForm.vue  ResultsTable.vue
frontend/src/views/: HomeView.vue
templates/: index.html
